<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPeople"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="82dp"
        android:layout_height="19dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txtHunger"
        app:layout_constraintBottom_toTopOf="@+id/hungry_radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_attend_edit_text"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="32dp"
        android:text="@string/txtPizza"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/num_pizzas_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hungry_radio_group" />

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="176dp"
        android:layout_height="90dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/num_pizzas_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/light_radio_button"
            android:layout_width="122dp"
            android:layout_height="27dp"
            android:text="@string/option1" />

        <RadioButton
            android:id="@+id/medium_radio_button"
            android:layout_width="122dp"
            android:layout_height="29dp"
            android:text="@string/option2" />

        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:layout_width="122dp"
            android:layout_height="27dp"
            android:text="@string/option3" />
    </RadioGroup>

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:layout_width="34dp"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="207dp"
        android:layout_marginBottom="70dp"
        android:text=" "
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/hungry_radio_group" />

    <Button
        android:id="@+id/button"
        android:layout_width="192dp"
        android:layout_height="54dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="230dp"
        android:text="@string/txtButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>